--- a/k19234_10.md
+++ b/k19234_10.md
@@ -4,7 +4,7 @@
 
 | 氏名           | 学籍番号    | GitHubアカウント(登録メールアドレス) |
 | -------------- | ----------- | -------------------------------------- |
-| 愛工　大郎     | K00000      | AIT_TARO (k00000kk@aitech.ac.jp) |
+| 小野木　夏樹     | K19234      | Natchan5150 (k19234kk@aitech.ac.jp) |
 
 ## 2. 作成した日記リポジトリのコミットログ
 
