--- a/k19234_10.md
+++ b/k19234_10.md
@@ -4,14 +4,224 @@
 
 | 氏名           | 学籍番号    | GitHubアカウント(登録メールアドレス) |
 | -------------- | ----------- | -------------------------------------- |
-| 小野木　夏樹     | K19234      | Natchan5150 (k19234kk@aitech.ac.jp) |
+| 小野木　夏樹     | K19234      | Natchan5150(k19234kk@aitech.ac.jp) |
 
 ## 2. 作成した日記リポジトリのコミットログ
 
 ターミナルで、作成した日記リポジトリのローカルディレクトリにて、mainブランチをfetch/pullした後に、`$ git --no-pager log --graph`を実行し、結果を以下の`<rpe>〜</pre>`内に貼り付けます。
 
 <pre>
-
+*   commit 544990e747261ee3923e7fc5ad5521c20b19a6f9 (HEAD -> main, origin/main, origin/HEAD)
+|\  Merge: cbf9f4b cc300bc
+| | Author: nagitonsama <95839502+nagitonsama@users.noreply.github.com>
+| | Date:   Tue Dec 14 19:32:47 2021 +0900
+| | 
+| |     Merge pull request #10 from 2021AIT-OOP2-G02/koike_diary_edit
+| |     
+| |     Koike diary edit
+| |   
+| *   commit cc300bc6bc4fd233c7d6ed02fa2f9fbb56600ad7
+| |\  Merge: ffc74f3 cbf9f4b
+| |/  Author: ナポリ <95839488+naporiokayuki@users.noreply.github.com>
+|/|   Date:   Tue Dec 14 19:30:17 2021 +0900
+| |   
+| |       Merge branch 'main' into koike_diary_edit
+| |   
+* |   commit cbf9f4b70a436af33c1b898b9ac3db0767b06a36
+|\ \  Merge: a41403d 39f8e04
+| | | Author: k20066 <87357429+k20066@users.noreply.github.com>
+| | | Date:   Mon Dec 13 20:27:28 2021 +0900
+| | | 
+| | |     Merge pull request #9 from 2021AIT-OOP2-G02/onogi_diary_edit
+| | |     
+| | |     Onogi diary edit
+| | | 
+| * | commit 39f8e04a06e2a7b0f3ce936ca3cedcbe34259e24 (origin/onogi_diary_edit, onogi_diary_edit)
+| | | Author: Natchan5150 <k19234kk@aitech.ac.jp>
+| | | Date:   Thu Dec 9 17:40:08 2021 +0900
+| | | 
+| | |     Create OnogiDiary.py
+| | |     
+| | |     OnogiDiaryの作成
+| | | 
+| * | commit 075814745fde78f6ff2561543cf4f46adeb0f129
+|/ /  Author: Natchan5150 <k19234kk@aitech.ac.jp>
+| |   Date:   Thu Dec 9 17:39:50 2021 +0900
+| |   
+| |       Update main.py
+| |       
+| |       main.pyの作成
+| |   
+* |   commit a41403de1d3887a0fc64e63a651e9493c021ee53
+|\ \  Merge: 75749c3 e6450ea
+| | | Author: わだたける <68636852+wdtkr@users.noreply.github.com>
+| | | Date:   Thu Dec 9 16:44:00 2021 +0900
+| | | 
+| | |     Merge pull request #6 from 2021AIT-OOP2-G02/Diary-wada
+| | |     
+| | |     smapleをsampleに修正した
+| | | 
+| * | commit e6450eae707ab2f5b71d153d7ad621a982f64d05 (origin/Diary-wada)
+|/ /  Author: わだたける <wdtkru@icloud.com>
+| |   Date:   Thu Dec 9 16:43:16 2021 +0900
+| |   
+| |       smapleをsampleに修正した
+| |       
+| |       修正を無かったことにしちゃったので、もう一度
+| |   
+* |   commit 75749c3d0968669c1e5992cd5bc0b0e9db08ec20
+|\ \  Merge: 97b2403 89b2a1e
+| | | Author: わだたける <68636852+wdtkr@users.noreply.github.com>
+| | | Date:   Thu Dec 9 16:36:35 2021 +0900
+| | | 
+| | |     Merge pull request #5 from 2021AIT-OOP2-G02/nagisa-diary-edit
+| | |     
+| | |     NagisaDiaryの追加
+| | |   
+| * |   commit 89b2a1e90596f722a6651013223e4659c8047bdf (origin/nagisa-diary-edit)
+| |\ \  Merge: b5c6fa5 97b2403
+| |/ /  Author: わだたける <68636852+wdtkr@users.noreply.github.com>
+|/| |   Date:   Thu Dec 9 16:35:39 2021 +0900
+| | |   
+| | |       Merge branch 'main' into nagisa-diary-edit
+| | |   
+* | |   commit 97b2403e2051ae91389c07f7a9de226d4dcbfaf9
+|\ \ \  Merge: f646698 636e5fa
+| | | | Author: Onigiri00 <95838936+Onigiri00@users.noreply.github.com>
+| | | | Date:   Thu Dec 9 16:28:34 2021 +0900
+| | | | 
+| | | |     Merge pull request #4 from 2021AIT-OOP2-G02/origin/sora_diary_edit
+| | | |     
+| | | |     edit diary
+| | | |   
+| * | |   commit 636e5fabde289760810e5ab5893a24c9a85fe35a (origin/origin/sora_diary_edit)
+| |\ \ \  Merge: fe0ab70 f646698
+| |/ / /  Author: Onigiri00 <95838936+Onigiri00@users.noreply.github.com>
+|/| | |   Date:   Thu Dec 9 16:28:22 2021 +0900
+| | | |   
+| | | |       Merge branch 'main' into origin/sora_diary_edit
+| | | |   
+* | | |   commit f646698dd71b2266d152067d29d71dc389fbc6c5
+|\ \ \ \  Merge: faffcb8 9897893
+| | | | | Author: k20066 <87357429+k20066@users.noreply.github.com>
+| | | | | Date:   Thu Dec 9 16:23:23 2021 +0900
+| | | | | 
+| | | | |     Merge pull request #3 from 2021AIT-OOP2-G02/suzuki-diary-edit
+| | | | |     
+| | | | |     Suzuki diary edit
+| | | | |   
+| * | | |   commit 9897893ea7ac5fd5c9cfda8a1e283667e1333554 (origin/suzuki-diary-edit)
+| |\ \ \ \  Merge: 9f6b337 faffcb8
+| |/ / / /  Author: k20066 <87357429+k20066@users.noreply.github.com>
+|/| | | |   Date:   Thu Dec 9 16:23:14 2021 +0900
+| | | | |   
+| | | | |       Merge branch 'main' into suzuki-diary-edit
+| | | | |   
+* | | | |   commit faffcb872a5646323fde7f4cde6f03203aa182e8
+|\ \ \ \ \  Merge: b774511 084d885
+| | | | | | Author: k20066 <87357429+k20066@users.noreply.github.com>
+| | | | | | Date:   Thu Dec 9 16:18:09 2021 +0900
+| | | | | | 
+| | | | | |     Merge pull request #2 from 2021AIT-OOP2-G02/Diary-wada
+| | | | | |     
+| | | | | |     WadaDiaryの追加
+| | | | | | 
+| * | | | | commit 084d8853502d699c41a311d164299db16d4a91ae
+| | | | | | Author: わだたける <wdtkru@icloud.com>
+| | | | | | Date:   Thu Dec 9 16:13:23 2021 +0900
+| | | | | | 
+| | | | | |     mainにWadaDiaryの追加、WadaDiaryの修正
+| | | | | |     
+| | | | | |     Sampleになってたから直した。
+| | | | | | 
+| * | | | | commit ef660ff04ed2de8bb35eeeccd089a88ef9855efe
+|/ / / / /  Author: わだたける <wdtkru@icloud.com>
+| | | | |   Date:   Thu Dec 9 16:10:59 2021 +0900
+| | | | |   
+| | | | |       WadaDiary.pyの追加
+| | | | | 
+| * | | | commit 9f6b337be372e9b3d0c0367e2e29e97511d0c3d8
+| | | | | Author: k20066 <87357429+k20066@users.noreply.github.com>
+| | | | | Date:   Thu Dec 9 16:21:21 2021 +0900
+| | | | | 
+| | | | |     change_mess
+| | | | | 
+| * | | | commit d0d5d687e1ff04b34995f50b9a9ac46f9021fc8d
+| | | | | Author: k20066 <87357429+k20066@users.noreply.github.com>
+| | | | | Date:   Thu Dec 9 16:15:21 2021 +0900
+| | | | | 
+| | | | |     chang
+| | | | | 
+| * | | | commit 0c21c6c17ef89c468b67c0a2ece5165fc888faec
+|/ / / /  Author: k20066 <87357429+k20066@users.noreply.github.com>
+| | | |   Date:   Thu Dec 9 16:10:49 2021 +0900
+| | | |   
+| | | |       add_suzuki_Diary
+| | | | 
+| * | | commit fe0ab700f3fabaa3066c942abce1604cf12e05d5
+|/ / /  Author: Onigiri00 <k20121kk@aitech.ac.jp>
+| | |   Date:   Thu Dec 9 16:25:15 2021 +0900
+| | |   
+| | |       edit diary
+| | | 
+| * | commit b5c6fa5b0968d1c0e9b2029e442f50fb8ce97ac3
+|/ /  Author: nagitonsama <95839502+nagitonsama@users.noreply.github.com>
+| |   Date:   Thu Dec 9 16:25:41 2021 +0900
+| |   
+| |       NagisaDiaryの追加
+| |       
+| |       NagisaDiary.pyの追加、main,pyの変更
+| | 
+| * commit ffc74f32fef831e707ac77ac213b0119e2613b33
+| | Author: naporiokayuki <95839488+naporiokayuki@users.noreply.github.com>
+| | Date:   Tue Dec 14 19:28:32 2021 +0900
+| | 
+| |     完成形
+| | 
+| * commit 221d75b6dd063346d91c746a5b5f67bba80ac6b5
+| | Author: naporiokayuki <95839488+naporiokayuki@users.noreply.github.com>
+| | Date:   Thu Dec 9 16:09:35 2021 +0900
+| | 
+| |     Update main.py
+| | 
+| * commit 713fef156e469e0b9708ec3b58fccd4501a1fdb2
+|/  Author: naporiokayuki <95839488+naporiokayuki@users.noreply.github.com>
+|   Date:   Thu Dec 9 16:05:36 2021 +0900
+|   
+|       古池の日記
+| 
+* commit b774511367c3027bf52274db24932a8cb1f28d0b
+| Author: k20066 <87357429+k20066@users.noreply.github.com>
+| Date:   Thu Dec 9 15:53:34 2021 +0900
+| 
+|     delite
+|   
+*   commit ad8f3fc1565c25a2ea6fa630b549406c48da81c4
+|\  Merge: abe3f7e 775bd51
+| | Author: k20066 <87357429+k20066@users.noreply.github.com>
+| | Date:   Thu Dec 9 15:49:32 2021 +0900
+| | 
+| |     Merge pull request #1 from 2021AIT-OOP2-G02/create_k20066_diary
+| |     
+| |     change
+| | 
+| * commit 775bd516bb7857b3e6b045aef3086079a3163ff1
+|/  Author: k20066 <87357429+k20066@users.noreply.github.com>
+|   Date:   Thu Dec 9 15:47:21 2021 +0900
+|   
+|       change
+| 
+* commit abe3f7e927953d439814a8d556618fd067709bac
+| Author: k20066 <87357429+k20066@users.noreply.github.com>
+| Date:   Thu Dec 9 15:34:22 2021 +0900
+| 
+|     add
+| 
+* commit 0c22e034c36a2765fa63697e6b1a90c2bc9a8353
+  Author: k20066 <87357429+k20066@users.noreply.github.com>
+  Date:   Thu Dec 9 15:30:41 2021 +0900
+  
+      Initial commit
 </pre>
 
 
