--- a/k19234_10.md
+++ b/k19234_10.md
@@ -231,10 +231,16 @@
 
 ### 3-1. バージョン管理システムを利用することによるメリットはなにか
 
-
+サーバー内のファイルを「いつ」、「誰が」、「どのような変更を加えたか」などが分かります。 これによってサーバー内のファイルに対して、ファイル名以外に持ち主や目的などの付加情報を加えることができる．
 
 ### 3-2. Gitにおけるキーワード「clone」「commit」「push」「branch」「fetch」「pull」「merge」「rebase」についてそれぞれ何をするものか (他者に説明できるよう、わかりやすく簡潔な文章で表すこと)
-
-
+「clone」は，リモートリポジトリをコピーしてローカルリポジトリを作成すること。
+「commit」は，インデックスに登録してある変更対象をローカルリポジトリに反映すること。
+「push」は，ローカルリポジトリの変更をリモートリポジトリに反映させること。
+「branch」は，履歴管理を枝分かれさせてたもの。ブランチを使うこちにより、複数の履歴を並列に管理できる。
+「fetch」は，リモートリポジトリの変更をローカルリポジトリに反映させること。フェッチ＋マージ
+「pull」は，リモートリポジトリの変更をローカルリポジトリに反映させること。フェッチ＋マージ
+「merge」は，異なるブランチの変更を反映させること。お互いの変更履歴が残る。
+「rebase」は，異なるブランチの変更を反映させること。変更履歴が片方に集約される
 
 ### 3-3. プロジェクト進行に、GitHub Flowを採用することで解決できるチーム開発での問題はなにか (実際にGitHub Flowで作業する手順も説明する)
