--- a/k19234_10.md
+++ b/k19234_10.md
@@ -8,7 +8,7 @@
 
 ## 2. 作成した日記リポジトリのコミットログ
 
-ターミナルで、作成した日記リポジトリのローカルディレクトリにて、mainブランチをfetch/pullした後に、`$ git --no-pager log --graph`を実行し、結果を以下の`<rpe>〜</pre>`内に貼り付けます。
+ターミナルで、作成した日記リポジトリのローカルディレクトリにて、mainブランチをfetch/pullした後に、`$ git --no-pager log --graph`を実行し、結果を以下の`<rpe>〜</pre>`内に貼り付けます．
 
 <pre>
 *   commit 544990e747261ee3923e7fc5ad5521c20b19a6f9 (HEAD -> main, origin/main, origin/HEAD)
@@ -132,7 +132,7 @@
 | | | | | | 
 | | | | | |     mainにWadaDiaryの追加、WadaDiaryの修正
 | | | | | |     
-| | | | | |     Sampleになってたから直した。
+| | | | | |     Sampleになってたから直した．
 | | | | | | 
 | * | | | | commit ef660ff04ed2de8bb35eeeccd089a88ef9855efe
 |/ / / / /  Author: わだたける <wdtkru@icloud.com>
@@ -227,20 +227,30 @@
 
 ## 3. Git及びGitHubに関する調査
 
-以下の各項目について、インターネットや書籍を利用し調べ、自分なりの言葉で説明をしてください。(参考文献等あればそれも記載すること)
+以下の各項目について、インターネットや書籍を利用し調べ、自分なりの言葉で説明をしてください．(参考文献等あればそれも記載すること)
 
 ### 3-1. バージョン管理システムを利用することによるメリットはなにか
-
-サーバー内のファイルを「いつ」、「誰が」、「どのような変更を加えたか」などが分かります。 これによってサーバー内のファイルに対して、ファイル名以外に持ち主や目的などの付加情報を加えることができる．
-
+最大のメリットは，ファイルの変更がバージョンによって管理されている事である．バージョン管理システムを使わずに，複数人で1つのファイルをサーバーで管理していると、デグレード障害が発生する場合がある．例えば，Aさんが作成してアップロードしたファイルを、Bさんが修正したのにも関わらず、Aさんが何も知らずにアップロードしたら，Bさんの修正内容を無視したAさんの修正内容だけがサーバーに残った状態になる．これだと、Bさんの修正が無駄になってしまう．  
+なので，チーム全体が連携して開発するために，「ファイルの変更履歴」，「バージョン表記」，「ファイル更新者の名前」がわかるバージョン管理システムは必要である．
+  
+[参考文献：GIXO](https://www.gixo.jp/blog/12531/)
 ### 3-2. Gitにおけるキーワード「clone」「commit」「push」「branch」「fetch」「pull」「merge」「rebase」についてそれぞれ何をするものか (他者に説明できるよう、わかりやすく簡潔な文章で表すこと)
-「clone」は，リモートリポジトリをコピーしてローカルリポジトリを作成すること。
-「commit」は，インデックスに登録してある変更対象をローカルリポジトリに反映すること。
-「push」は，ローカルリポジトリの変更をリモートリポジトリに反映させること。
-「branch」は，履歴管理を枝分かれさせてたもの。ブランチを使うこちにより、複数の履歴を並列に管理できる。
-「fetch」は，リモートリポジトリの変更をローカルリポジトリに反映させること。フェッチ＋マージ
-「pull」は，リモートリポジトリの変更をローカルリポジトリに反映させること。フェッチ＋マージ
-「merge」は，異なるブランチの変更を反映させること。お互いの変更履歴が残る。
-「rebase」は，異なるブランチの変更を反映させること。変更履歴が片方に集約される
+「clone」は，リモートリポジトリをコピーしてローカルリポジトリを作成すること．
+「commit」は，インデックスに登録してある変更対象をローカルリポジトリに反映すること．
+「push」は，ローカルリポジトリの変更をリモートリポジトリに反映させること．
+「branch」は，履歴管理を枝分かれさせてたものであり，ブランチを使うことにより、複数の履歴を並列に管理できる．
+「fetch」は，リモートリポジトリに変更がないか確認すること．
+「pull」は，リモートリポジトリのうち、ローカルリポジトリにないものだけを持ってくること．
+「merge」は，異なるブランチの変更を反映させることであり，お互いの変更履歴が残る．
+「rebase」は，異なるブランチの変更を反映させることであり，変更履歴が片方に集約される．
 
 ### 3-3. プロジェクト進行に、GitHub Flowを採用することで解決できるチーム開発での問題はなにか (実際にGitHub Flowで作業する手順も説明する)
+<GitHub Flowを採用することで解決できるチーム開発での問題>  
+そのため、複数人が携わっているプロジェクトにおいて「誰がいつソースコードを書き換えたのか」という履歴などが把握可能。
+<手順>  
+[手順1]開発リポジトリを、自分のアカウントへforkする．  
+[手順2]masterブランチから、作業ブランチを名付けて切る．  
+[手順3]ローカルで開発、コミットしてForkしたブランチへPushする．  
+[手順4]本家リポジトリへPullRequestsを出し、フィードバックを受けながら開発を進める．  
+[手順5]レビュワーに承認されたら、本家リポジトリへマージされる．  
+[手順6]配置(デプロイ)  
