--- a/k19234_10.md
+++ b/k19234_10.md
@@ -231,7 +231,7 @@
 
 ### 3-1. バージョン管理システムを利用することによるメリットはなにか
 最大のメリットは，ファイルの変更がバージョンによって管理されている事である．バージョン管理システムを使わずに，複数人で1つのファイルをサーバーで管理していると、デグレード障害が発生する場合がある．例えば，Aさんが作成してアップロードしたファイルを、Bさんが修正したのにも関わらず、Aさんが何も知らずにアップロードしたら，Bさんの修正内容を無視したAさんの修正内容だけがサーバーに残った状態になる．これだと、Bさんの修正が無駄になってしまう．  
-なので，チーム全体が連携して開発するために「ファイルの変更履歴」，「バージョン表記」，「ファイル更新者の名前」がわかるバージョン管理システムは必要である．
+なので，チーム全体が連携して開発するために「ファイルの変更履歴」，「バージョン表記」，「ファイル更新者の名前」がわかるバージョン管理システムは大いに役立つ．
   
 [参考文献：GIXO](https://www.gixo.jp/blog/12531/)
 ### 3-2. Gitにおけるキーワード「clone」「commit」「push」「branch」「fetch」「pull」「merge」「rebase」についてそれぞれ何をするものか (他者に説明できるよう、わかりやすく簡潔な文章で表すこと)
@@ -246,7 +246,7 @@
 
 ### 3-3. プロジェクト進行に、GitHub Flowを採用することで解決できるチーム開発での問題はなにか (実際にGitHub Flowで作業する手順も説明する)
 <GitHub Flowを採用することで解決できるチーム開発での問題>  
-そのため、複数人が携わっているプロジェクトにおいて「誰がいつソースコードを書き換えたのか」という履歴などが把握可能。  
+複数人が携わっているプロジェクトにおいて「誰がいつソースコードを書き換えたのか」という履歴などが把握可能なので，デグレード障害が
 <手順>  
 [手順1]開発リポジトリを、自分のアカウントへforkする．  
 [手順2]masterブランチから、作業ブランチを名付けて切る．  
