--- a/k19234_10.md
+++ b/k19234_10.md
@@ -246,7 +246,7 @@
 
 ### 3-3. プロジェクト進行に、GitHub Flowを採用することで解決できるチーム開発での問題はなにか (実際にGitHub Flowで作業する手順も説明する)
 <GitHub Flowを採用することで解決できるチーム開発での問題>  
-複数人が携わっているプロジェクトにおいて「誰がいつソースコードを書き換えたのか」という履歴などが把握可能なので，デグレード障害を未然に防ぐことができる．また，「PullRequests」という機能によってコードレビューを実施し，効率的なチーム開発ができる．  
+複数人が携わっているプロジェクトにおいて「誰がいつソースコードを書き換えたのか」という履歴などが把握可能なので，デグレード障害を未然に防ぐことができる．また，「PullRequests」という機能を用いてコードレビューを実施し，効率的なチーム開発ができる．  
 
 <作業する手順>  
 [手順1]開発リポジトリを、自分のアカウントへforkする．  
