--- a/k19234_11.md
+++ b/k19234_11.md
@@ -404,5 +404,7 @@
   Date:   Thu Dec 16 14:00:09 2021 +0900
   
       Initial commit
-<pre>
+</pre>
+
 ## 4. 感想
+画像処理の2つの項目を担当しました．1つ目は「モザイク処理」で，2つ目は，「顔を囲う処理」です．担当した箇所を責任もって最後までやりきることができました．みんなで，休日もチームメンバーと連絡を取り合って，課題を最後まで完成させることができました．今後の授業が，チーム開発の本番になってくるので，チームに貢献できるように頑張っていきたいです．
